[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "moto"
authors = [{ name = "Bryan Witherspoon" }]
readme = "README.md"
dynamic = ["version", "description"]
dependencies = [
    "beautifulsoup4 == 4.11.1",
    "python-dateutil == 2.8.2",
    "requests == 2.28.1",
    "rich == 12.6.0",
    "influxdb-client == 1.34.0",
    "typer == 0.7.0",
    "schedule == 1.1.0",
]

[project.urls]
Repository = "https://github.com/uoodsq/moto.git"

[project.scripts]
moto = "moto.cli:app"
